--- a/responsive/css/main.css
+++ b/responsive/css/main.css
@@ -52,7 +52,10 @@
   z-index: 2;
   text-align: center;
   color: #fff;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -150,12 +153,18 @@
   height: 10px;
   margin: 10px auto 0;
   background-color: #fff;
-  animation-name: mouseAnimation;
-  animation-duration: 1s;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-  animation: mouseAnimation 1s ease-in-out 0s infinite alternate;
+  -webkit-animation-name: mouseAnimation;
+          animation-name: mouseAnimation;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-timing-function: ease-in-out;
+          animation-timing-function: ease-in-out;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-direction: alternate;
+          animation-direction: alternate;
+  -webkit-animation: mouseAnimation 1s ease-in-out 0s infinite alternate;
+          animation: mouseAnimation 1s ease-in-out 0s infinite alternate;
   display: block;
   position: relative;
   content: "";
@@ -308,7 +317,8 @@
 #news .list li img {
   width: 100%;
   height: 350px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 #news .list li .desc {
   overflow: hidden;
@@ -350,6 +360,15 @@
   display: block;
   position: relative;
   content: "";
+}
+
+@-webkit-keyframes mouseAnimation {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(10px);
+  }
 }
 
 @keyframes mouseAnimation {
