--- a/responsive/css/common.css
+++ b/responsive/css/common.css
@@ -1,3 +1,12 @@
 .blind {
   display: none;
 }
+a {
+  color: inherit;
+  text-decoration: none;
+}
+button {
+  border: none;
+  background: none;
+  outline: none;
+}
