--- a/responsive/include/header.html
+++ b/responsive/include/header.html
@@ -5,23 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0,user-scaleable=no" />
     <title>하이탑</title>
+    <!-- link favicon -->
     <link rel="shortcut icon" href="../images/common/favicon.png" type="image/x-icon" />
+    <!-- link reset css -->
     <link rel="stylesheet" href="../css/reset.css" />
+    <!-- link font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-
+    <!-- link css -->
     <link rel="stylesheet" href="../css/aos.css" />
     <link rel="stylesheet" href="../css/splitting.css" />
     <link rel="stylesheet" href="../css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="../css/common.css" />
     <link rel="stylesheet" href="../css/board.css" />
-
     <link rel="stylesheet" href="../css/layout.css" />
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/contents.css" />
-
+    <!-- link JS -->
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1fc15ed7ddf688ae1e44a60a6bb67890&libraries=services"></script>
     <script src="../js/swiper-bundle.min.js"></script>
     <script src="../js/aos.js"></script>
@@ -30,6 +32,7 @@
     <script src="../js/jquery-3.6.0.min.js"></script>
   </head>
   <body>
+    <!-- s: header -->
     <header id="header">
       <div class="container">
         <h1 id="logo">
@@ -39,28 +42,28 @@
           <h2 class="blind">gnb</h2>
           <ul class="list">
             <li>
-              <a href="" class="depth01">Company </a>
+              <a href="#" class="depth01">Company </a>
               <? include("../include/lnb01.html"); ?>
             </li>
             <li>
-              <a href="" class="depth01">Business</a>
+              <a href="#" class="depth01">Business</a>
               <? include("../include/lnb02.html"); ?>
             </li>
             <li>
-              <a href="" class="depth01">PR</a>
+              <a href="#" class="depth01">PR</a>
               <? include("../include/lnb03.html"); ?>
             </li>
             <li>
-              <a href="" class="depth01">Customer</a>
+              <a href="#" class="depth01">Customer</a>
               <? include("../include/lnb04.html"); ?>
             </li>
             <li>
-              <a href="" class="depth01">Recruit</a>
+              <a href="#" class="depth01">Recruit</a>
               <? include("../include/lnb05.html"); ?>
             </li>
           </ul>
         </nav>
-        <a href="" class="online">온라인 견적문의</a>
+        <a href="#" class="online">온라인 견적문의</a>
       </div>
       <button class="btnAll">
         <span></span>
@@ -68,6 +71,6 @@
         <span></span>
       </button>
     </header>
-    <!-- header end -->
+    <!-- e: header -->
   </body>
 </html>
