--- a/responsive/scss/layout.scss
+++ b/responsive/scss/layout.scss
@@ -6,15 +6,6 @@ body {
   font-size: $font-normal;
   color: $font-color;
 }
-a {
-  color: inherit;
-  text-decoration: none;
-}
-button {
-  border: none;
-  background: none;
-  outline: none;
-}
 .container {
   width: 1200px;
   position: relative;
@@ -36,8 +27,7 @@ button {
   .container {
     display: flex;
     justify-content: center;
-    position: static; // position default;
-    max-width: 1920px;
+    position: static;
   }
   #logo {
     display: flex;
@@ -144,7 +134,6 @@ button {
     ul {
       display: flex;
       justify-content: center;
-      //padding: 20px 0;
       li {
         &:nth-child(1) a:before {
           display: none;
@@ -153,7 +142,6 @@ button {
           display: block;
           position: relative;
           padding: 20px 30px;
-
           &:before {
             width: 1px;
             height: 14px;
@@ -196,10 +184,6 @@ button {
     }
   }
 }
-
-// mobile - first
-
-//responsive
 
 @media all and (max-width: 1400px) {
   #header {
@@ -267,11 +251,7 @@ button {
     width: 100%;
   }
   #header {
-    .container {
-      // justify-content: stretch;
-    }
     #gnb {
-      // flex-grow: 1;
       width: 100%;
       height: 100vh;
       padding-top: 100px;
@@ -282,11 +262,9 @@ button {
       background-color: $main-color;
       transition: right 0.5s ease-in-out;
       .list {
-        align-items: stretch;
         flex-direction: column;
         > li {
           .depth01 {
-            width: 100%;
             border-bottom: 1px solid rgba(255, 255, 255, 0.5);
           }
           .depth02 {
