--- a/responsive/css/main.css
+++ b/responsive/css/main.css
@@ -45,9 +45,6 @@
 #mainVisual ul li.visual02 .img {
   background-image: url("../images/main/mainVisual02.jpg");
 }
-#mainVisual ul li.visual03 .img {
-  background-image: url("../images/main/mainVisual03.jpg");
-}
 #mainVisual .slogan {
   z-index: 2;
   text-align: center;
@@ -233,16 +230,10 @@
 #business .list li:hover img {
   transform: scale(1.2);
 }
-#business .list li:hover .border span:nth-child(1) {
+#business .list li:hover .border span:nth-child(2n-1) {
   transform: scaleX(1);
 }
-#business .list li:hover .border span:nth-child(2) {
-  transform: scaleY(1);
-}
-#business .list li:hover .border span:nth-child(3) {
-  transform: scaleX(1);
-}
-#business .list li:hover .border span:nth-child(4) {
+#business .list li:hover .border span:nth-child(2n) {
   transform: scaleY(1);
 }
 #business .list li .txtBox {
@@ -271,38 +262,35 @@
   transition: transform 0.25s ease;
   background-color: #fff;
 }
-#business .list li .border span:nth-child(1) {
-  width: 100%;
-  height: 1px;
-  top: 0;
-  left: 0;
-  transform: scaleX(0);
-  transform-origin: 0 50%;
-}
-#business .list li .border span:nth-child(2) {
+#business .list li .border span:nth-child(2n) {
   width: 1px;
   height: 100%;
   top: 0;
-  right: 0;
   transform: scaleY(0);
+}
+#business .list li .border span:nth-child(2n-1) {
+  width: 100%;
+  height: 1px;
+  transform: scaleX(0);
+}
+#business .list li .border span:nth-child(1) {
+  top: 0;
+  left: 0;
+  transform-origin: 0 50%;
+}
+#business .list li .border span:nth-child(2) {
+  right: 0;
   transform-origin: 50% 0;
   transition-delay: 0.25s;
 }
 #business .list li .border span:nth-child(3) {
-  width: 100%;
-  height: 1px;
   bottom: 0;
   left: 0;
-  transform: scaleX(0);
   transform-origin: 100% 50%;
   transition-delay: 0.5s;
 }
 #business .list li .border span:nth-child(4) {
-  width: 1px;
-  height: 100%;
-  top: 0;
   left: 0;
-  transform: scaleY(0);
   transform-origin: 50% 100%;
   transition-delay: 0.75s;
 }
@@ -315,6 +303,12 @@
   width: calc(33.33% - 10px);
   border: 1px solid #ccc;
   box-sizing: border-box;
+}
+#news .list li:hover {
+  transform: translateY(-20px);
+  border: 1px solid #bf0c14;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0px 5px 10px #ddd;
 }
 #news .list li img {
   width: 100%;
