--- a/responsive/scss/layout.scss
+++ b/responsive/scss/layout.scss
@@ -13,9 +13,20 @@ body {
 }
 #header {
   width: 100%;
-  position: absolute;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   z-index: 99;
   color: #fff;
+  &::before {
+    width: 100%;
+    height: 100px;
+    background-color: rgba(0, 0, 0, 0.7);
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    @include pseudo;
+  }
   &:after {
     width: 100%;
     height: 1px;
@@ -25,6 +36,7 @@ body {
     @include pseudo;
   }
   .container {
+    width: 100%;
     display: flex;
     justify-content: center;
     position: static;
@@ -103,6 +115,9 @@ body {
         top: 64px;
       }
     }
+  }
+  &.scroll::before {
+    opacity: 1;
   }
   &.open {
     #gnb {
